White background and minor changes

--- a/src/main/resources/public/app/views/login.html
+++ b/src/main/resources/public/app/views/login.html
@@ -6,18 +6,19 @@
         <br>
         <br>
         <br>
-                    <div align=”justify”><img src="images/FinalBanner.png" width="" height="" border="0">
-        </div>
+    <div align=”justify”><img src="images/FinalBanner2.png" width="" height="" border="0"></div>
     </center>
-
+  
 <header id="top" class="header">
     <div class="text-vertical-center">
         <h1>Welcome to Nexus!</h1>
         <h3>Social &amp; Gaming</h3>
         <br>
+
         <!--a href="#services" class="btn btn-dark btn-lg">Find Out More</a-->
-    </div>
-</header>
+  </div>
+</header> 
+
 
 
  <!-- Services -->
@@ -32,8 +33,8 @@
                     <div class="col-md-3 col-sm-6">
                         <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+                                <!-- <i class="fa fa-circle fa-stack-2x"></i>-->
+                                <i class="fa fa-cloud fa-stack-2x text-primary"></i>
                             </span>
                             <h4>
                                 <strong>Matchmaking</strong>
@@ -46,11 +47,11 @@
                     <div class="col-md-3 col-sm-6">
                         <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
+                                <!-- <i class="fa fa-circle fa-stack-2x"></i>-->
+                                <i class="fa fa-compass fa-stack-2x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Instant Messaging</strong>
+                                <strong>Messaging</strong>
                             </h4>
 
                             <p>Talk to other players instantly!</p>
@@ -60,8 +61,8 @@
                     <div class="col-md-3 col-sm-6">
                         <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
+                                <!-- <i class="fa fa-circle fa-stack-2x"></i>-->
+                                <i class="fa fa-flask fa-stack-2x text-primary"></i>
                             </span>
                             <h4>
                                 <strong>Community</strong>
@@ -75,8 +76,8 @@
                     <div class="col-md-3 col-sm-6">
                         <div class="service-item">
                                 <span class="fa-stack fa-4x">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+                                <!-- <i class="fa fa-circle fa-stack-2x"></i>-->
+                                <i class="fa fa-shield fa-stack-2x text-primary"></i>
                             </span>
                             <h4>
                                 <strong>Profile</strong>
@@ -97,10 +98,10 @@
 </section>
   
 <!-- News Feed --> 
-<section id="news" class="news bg-primary">
+<section id="news" class="news bg-info">
     <div class="container">
         <div class="row text-center">
-            <div class="col-lg-10 col-lg-offset-1">
+          <div class="col-lg-10 col-lg-offset-1">
                 <h2>Current Gaming News</h2>
                 <hr class="small">
                 <div class="feed-container">
@@ -113,17 +114,8 @@
         </div>
     </div>      
 </section>
-      
-
-<!-- Callout -->
-<aside class="callout">
-    <div class="text-vertical-center">
-        <h1>Share your knowledge among your peers!</h1>
-    </div>
-</aside>
-
 <!-- /Need to change services to About Us and also the class -->
-<section id="about" class="about bg-primary">
+<section id="about" class="about ">
     <div class="container">
         <div class="row text-center">
             <div class="col-lg-10 col-lg-offset-1">
@@ -219,10 +211,10 @@
 </section>
 
 <!-- Portfolio -->
-<section id="portfolio" class="portfolio">
+<section id="portfolio" class="portfolio bg-info">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-10 col-lg-offset-1 text-center">
+        <div class="row text-center">
+          <div class="col-lg-10 col-lg-offset-1">
                 <h2>Games Supported</h2>
                 <hr class="small">
                 <div class="row">
@@ -239,14 +231,10 @@
                     </div>
                      <div class="col-md-6">
                         <div class="portfolio-item">
-                            <a href="http://blog.counter-strike.net/"><img class="img-portfolio img-responsive" img src="images/games/CS-GO-Logo.png"/></a>
-                        </div>
+                           <a href="http://us.battle.net/d3/en//"><img class="img-portfolio img-responsive img-resize" img src="images/games/diablo3edit.png"/></a>
+                           </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="portfolio-item">
-                            <a href="http://us.battle.net/hearthstone/en/"><img class="img-portfolio img-responsive" img src="images/games/Hearthstone-logo.png"/></a>
-                        </div>
-                    </div>
+                    
                     <!--iv class="col-md-6">
                         <div class="portfolio-item">
                             <a href="#">
@@ -264,7 +252,7 @@
                 </div>
                 <!-- /.row (nested) -->
                 <!--a href="#headTab" class="btn btn-dark">View More Games</a-->
-                 <a ng-click="viewMoreGames()" class="btn btn-light">View More Games</a>
+                
             </div>
             <!-- /.col-lg-10 -->
         </div>
@@ -272,21 +260,6 @@
     </div>
     <!-- /.container -->
 </section>
-
-<!-- Call to Action -->
-<aside class="call-to-action bg-primary">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h3>Nexus, safe community of friends and gaming</h3>
-                <!--a href="#" class="btn btn-lg btn-light">Click Me!</a-->
-                <!--a href="#" class="btn btn-lg btn-dark">Look at Me!</-->
-            </div>
-        </div>
-    </div>
-</aside>
-
-    
 </ng-cloak>
 
 
