Fixes by vahan biatch

--- a/src/main/resources/public/app/views/login.html
+++ b/src/main/resources/public/app/views/login.html
@@ -6,7 +6,7 @@
         <br>
         <br>
         <br>
-    <div align=”justify”><img src="images/FinalBanner2.png" width="" height="" border="0"></div>
+    <div align=”justify”><img src="images/FinalBanner2.png"></div>
     </center>
   
 <header id="top" class="header">
