--- a/src/main/resources/public/styles/styles.css
+++ b/src/main/resources/public/styles/styles.css
@@ -1,7 +1,7 @@
 .background {
     /*background-image: url('http://c2gmusichall.com/wp-content/uploads/2014/08/backgrounds-that-work-well-with-shadygamer-shadygamer.jpg');*/
-    background-color: #28a4c9;
-    /*#28a4c9*/
+    background-color: white;
+    background-color: #28a4c9
     background-size: cover;
     width: 100%;
 }
@@ -231,10 +231,12 @@ hr.small {
 .news {
     padding: 50px 0;
     font-size: 20pt;
+    color: #3366FF;
 }
 
 .about {
     padding: 50px 0;
+    color: #3366FF;
 }
 
 
@@ -242,7 +244,7 @@ hr.small {
 
 .services {
     padding: 50px 0;
-    color: white;
+    color: #3366FF;
 }
 
 .service-item {
@@ -269,6 +271,7 @@ hr.small {
 
 .portfolio {
     padding: 50px 0;
+    color: #3366FF;
 }
 
 .portfolio-item {
@@ -433,6 +436,9 @@ footer {
 }
 .center-this-text{
     text-align: center
+}
+.img-resize{
+ margin-left: 59%;   
 }
 .tooltip {
   display: inherit;
