--- a/src/main/resources/public/app/views/league.html
+++ b/src/main/resources/public/app/views/league.html
@@ -16,6 +16,7 @@
                    ng-keyup="$event.keyCode == 13 && searchSum(summonerName)" ng-model="summonerName"
                    placeholder="Search for a Summoner">
             <button type="button" ng-click="searchSum(summonerName)" class="btn btn-dark btn-sm">Submit</button>
+            <span class="error" ng-show="error" ng-cloak> {{error}}</span>
             <div class = "summonerWrapper" ng-if="exist">
                 <div ng-show="exist">
                     <form>
