--- a/src/main/resources/public/app/views/profile.html
+++ b/src/main/resources/public/app/views/profile.html
@@ -25,6 +25,7 @@
                     <ul class="nav nav-justified">
                         <li class="active"><a href="" data-toggle="tabs">Main</a></li>
                         <li><a href="" data-toggle="tabs">Info</a></li>
+                        <li ng-click="matchmaking()"><a>Matchmaking</a></li>
                     </ul>
                 </div>
             </div>
