close button fix

--- a/src/main/resources/public/app/views/matchmaking.html
+++ b/src/main/resources/public/app/views/matchmaking.html
@@ -1,26 +1,30 @@
 <ng-cloak>
-<div class="modal-content">
+    <div class="modal-content center-block">
 
-    <div class="modal-body">
-        
-       
- <div style="display:inline-block; min-height:290px;">
-     <span>>Choose a Date and Time you can play</span>
-      <uib-datepicker ng-model="date" class="well well-sm" datepicker-options="inlineOptions"></uib-datepicker>
-     <span>Start Time</span>
-      <uib-timepicker ng-model="startTime" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></uib-timepicker>
-     <span>Finish Time</span>
-      <uib-timepicker ng-model="finishTime" ng-change="changed()" hour-step="hstep" minute-step="mstep" show-meridian="ismeridian"></uib-timepicker>
-    </div>
-    </div>
-    <div class="modal-footer">
-        
-            
-                        <button type="button" ng-click="editAboutUser()" class="btn btn-dark">Submit</button>
-                        <button type="button" class="btn btn-default" ng-click="close()">Close</button>
-          
-                        <p class="text-danger">{{error}}</p>
+        <div class="modal-body center-block center ">
 
+
+            <div style="display:inline-block; min-height:290px;">
+                <span class="center">Choose a Date and Time you can play</span>
+                <uib-datepicker ng-model="date" class="well well-sm center" datepicker-options="inlineOptions"></uib-datepicker>
+                <div class="inline">
+                    <span>Start Time</span>
+                    <uib-timepicker ng-model="startTime" ng-change="changed()" hour-step="1" minute-step="15" show-meridian="ismeridian"></uib-timepicker>
+                </div>
+                <div class="inline">
+                    <span>Finish Time</span>
+                    <uib-timepicker ng-model="finishTime" ng-change="changed()" hour-step="1" minute-step="15" show-meridian="ismeridian"></uib-timepicker>
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+
+
+            <button type="button" ng-click="" class="btn btn-dark">Submit</button>
+            <button type="button" class="btn btn-default" ng-click="close()">Close</button>
+
+            <p class="text-danger">{{error}}</p>
+
+        </div>
     </div>
-</div>
-    </ng-cloak>
+</ng-cloak>
