--- a/src/main/resources/public/app/views/league.html
+++ b/src/main/resources/public/app/views/league.html
@@ -1,6 +1,6 @@
 <ng-cloak>
     <div class="container-fluid">
-        <div class="container">
+        <div class="container" align="center">
             <br>
             <br>
             <br>
@@ -9,14 +9,18 @@
             <div align="center">
                 <img src="images/Games/lol-logo.png">
             </div>
-            <br>
+            <form>
+                <br>
+                <br>Summoner Search
+                <br>
+                <input id="summonerSearch" type="text" class="basicInput" id="summonerName" name="summonerName"
+                                     ng-keyup="$event.keyCode == 13 && searchSum(summonerName)" ng-model="summonerName"
+                                     placeholder="Search for a Summoner">
+                <br>
+                <button type="button" ng-click="searchSum(summonerName)" class="btn btn-dark btn-sm add-topMargin">Submit</button>
+                <p class="text-danger">{{error}}</p>
+            </form>
 
-            <h2>Summoner search</h2>
-            <input id="summonerSearch" type="text" class="basicInput" id="summonerName" name="summonerName"
-                   ng-keyup="$event.keyCode == 13 && searchSum(summonerName)" ng-model="summonerName"
-                   placeholder="Search for a Summoner">
-            <button type="button" ng-click="searchSum(summonerName)" class="btn btn-dark btn-sm">Submit</button>
-            <p class="text-danger">{{error}}</p>
             <div class = "summonerWrapper" ng-if="exist">
                 <div ng-show="exist">
                     <form>
@@ -112,43 +116,8 @@
                                 <td>Max Number of Deaths: </td>
                                 <td>{{ chosenChampion[0]["stats"]["maxNumDeaths"] }}</td>
                             </tr>
-                            <!--<p>Total Sessions Played: {{ chosenChampion[0]["stats"]["totalSessionsPlayed"] }} </p>-->
-
-                            <!--<p>Total Deaths Per Session: {{ chosenChampion[0]["stats"]["totalDeathsPerSession"] }}</p>-->
-
-                            <!--<p>Total Damage Taken: {{ chosenChampion[0]["stats"]["totalDamageTaken"] }}</p>-->
-
-                            <!--<p>Total Minion Kills: {{ chosenChampion[0]["stats"]["totalMinionKills"] }}</p>-->
-
-                            <!--<p>Max Champions Killed: {{ chosenChampion[0]["stats"]["maxChampionsKilled"] }}</p>-->
-
-                            <!--<p>Total Double Kills: {{ chosenChampion[0]["stats"]["totalDoubleKills"] }}</p>-->
-
-                            <!--<p>Total Physical DamageDealt: {{ chosenChampion[0]["stats"]["totalPhysicalDamageDealt"] }}</p>-->
-
-                            <!--<p>Total Champion Kills: {{ chosenChampion[0]["stats"]["totalChampionKills"] }}</p>-->
-
-                            <!--<p>Total Assists: {{ chosenChampion[0]["stats"]["totalAssists"] }}</p>-->
-
-                            <!--<p>Total Damage Dealt: {{ chosenChampion[0]["stats"]["totalDamageDealt"] }}</p>-->
-
-                            <!--<p>Most Champion Kills Per Session: {{ chosenChampion[0]["stats"]["mostChampionKillsPerSession"] }}</p>-->
-
-                            <!--<p>Total Sessions Lost: {{ chosenChampion[0]["stats"]["totalSessionsLost"] }}</p>-->
-
-                            <!--<p>Total Sessions Won: {{ chosenChampion[0]["stats"]["totalSessionsWon"] }}</p>-->
-
-                            <!--<p>Total Magic Damage Dealt: {{ chosenChampion[0]["stats"]["totalMagicDamageDealt"] }}</p>-->
-
-                            <!--<p>Total Gold Earned: {{ chosenChampion[0]["stats"]["totalGoldEarned"] }}</p>-->
-
-                            <!--<p>Total Turrets Killed: {{ chosenChampion[0]["stats"]["totalTurretsKilled"] }}</p>-->
-
-                            <!--<p>Max Number of Deaths: {{ chosenChampion[0]["stats"]["maxNumDeaths"] }}</p>-->
-
 
                             </tbody>
-                            <!--<h2>Champion: {{ champ.key}}</h2>-->
                             <!--need to return champion profile and Name-->
 
                         </table>
@@ -170,10 +139,8 @@
                             <div class="feed-container">
 
 
-                                <iframe height="500" width="1000"
-                                        src="http://feed.mikle.com/widget/?rssmikle_url=http://na.leagueoflegends.com/en/rss.xml&rssmikle_frame_width=900&rssmikle_frame_height=500&frame_height_by_article=0&rssmikle_target=_blank&rssmikle_font=Arial%2C%20Helvetica%2C%20sans-serif&rssmikle_font_size=12&rssmikle_border=off&responsive=off&text_align=left&text_align2=left&corner=off&scrollbar=on&autoscroll=on_mc&scrolldirection=up&scrollstep=3&mcspeed=20&sort=Off&rssmikle_title=on&rssmikle_title_bgcolor=%230066FF&rssmikle_title_color=%23FFFFFF&rssmikle_item_bgcolor=%23FFFFFF&rssmikle_item_title_length=55&rssmikle_item_title_color=%230066FF&rssmikle_item_border_bottom=on&rssmikle_item_description=on&item_link=off&rssmikle_item_description_length=150&rssmikle_item_description_color=%23666666&rssmikle_item_date=gl1&rssmikle_timezone=Etc%2FGMT&datetime_format=%25b%20%25e%2C%20%25Y%20%25l%3A%25M%20%25p&item_description_style=html&item_thumbnail=full&item_thumbnail_selection=auto&article_num=15&rssmikle_item_podcast=off&"
-                                        scrolling="no" name="rssmikle_frame" marginwidth="0" marginheight="0" vspace="0"
-                                        hspace="0" frameborder="0"></iframe>
+                                <iframe  height="500"  width="1000" src="http://feed.mikle.com/widget/?rssmikle_url=http://na.leagueoflegends.com/en/rss.xml&rssmikle_frame_width=1000&rssmikle_frame_height=500&frame_height_by_article=0&rssmikle_target=_blank&rssmikle_font=Arial%2C%20Helvetica%2C%20sans-serif&rssmikle_font_size=12&rssmikle_border=off&responsive=off&text_align=left&text_align2=left&corner=off&scrollbar=on&autoscroll=on_mc&scrolldirection=up&scrollstep=3&mcspeed=20&sort=Off&rssmikle_title=on&rssmikle_title_sentence=WOW%20MMO%20FEED&rssmikle_title_bgcolor=%230066FF&rssmikle_title_color=%23FFFFFF&rssmikle_item_bgcolor=%23FFFFFF&rssmikle_item_title_length=55&rssmikle_item_title_color=%230066FF&rssmikle_item_border_bottom=on&rssmikle_item_description=on&item_link=off&rssmikle_item_description_length=150&rssmikle_item_description_color=%23666666&rssmikle_item_date=gl1&rssmikle_timezone=Etc%2FGMT&datetime_format=%25b%20%25e%2C%20%25Y%20%25l%3A%25M%20%25p&item_description_style=html&item_thumbnail=full&item_thumbnail_selection=auto&article_num=15&rssmikle_item_podcast=off&" scrolling="no" name="rssmikle_frame" marginwidth="0" marginheight="0" vspace="0" hspace="0" frameborder="0"></iframe>
+
                                 <!--<div style="font-size:10px; text-align:center; width:1000px;"></div>-->
 
                             </div>
