img fix response

--- a/src/main/resources/public/app/views/league.html
+++ b/src/main/resources/public/app/views/league.html
@@ -7,7 +7,7 @@
             <br>
 
             <div align="center">
-                <img src="images/Games/lol-logo.png">
+                <img class="img-portfolio img-responsive" img="" src="images/Games/lol-logo.png">
             </div>
             <form>
                 <br>
