add matchmaking post

--- a/src/main/resources/public/app/views/matchmaking.html
+++ b/src/main/resources/public/app/views/matchmaking.html
@@ -20,7 +20,7 @@
         <div class="modal-footer">
 
 
-            <button type="button" ng-click="" class="btn btn-dark">Submit</button>
+            <button type="button" ng-click="sendMatchDate()" class="btn btn-dark">Submit</button>
             <button type="button" class="btn btn-default" ng-click="close()">Close</button>
 
             <p class="text-danger">{{error}}</p>
