removing profile button

--- a/src/main/resources/public/app/views/profile.html
+++ b/src/main/resources/public/app/views/profile.html
@@ -15,7 +15,8 @@
             </div>
             <div class="row">
                 <div class="col-xs-6 col-sm-6">
-                    <button type="button" class="btn btn-success" ng-click="open()">Friend Me!</button>
+                    <!--Doesn't make sense to have add friends for main user profile-->
+                    <!--<button ng-show= "friendCheck" type="button" class="btn btn-success" ng-click="open()">Friend Me!</button>-->
                     <button type="button" class="btn btn-info" ng-click="open()">Send me a message</button>
                     <br>
                 </div>
