--- a/src/main/resources/public/app/views/profile.html
+++ b/src/main/resources/public/app/views/profile.html
@@ -124,7 +124,7 @@
                                 <div class="col-xs-4 col-md-4" ng-repeat="friends in friends">
                                     <div class="friendpics">
                                         <a ng-href="{{ friends.friendName}}">
-                                            <img id="friendPicSize" src="images/{{friends.friendPic}}"></a>
+                                            <!--<img id="friendPicSize" src="images/{{friends.friendPic}}"></a>-->
 
                                         <div class="caption">
                                             <h3>
