--- a/src/main/resources/public/app/views/profile.html
+++ b/src/main/resources/public/app/views/profile.html
@@ -17,7 +17,7 @@
                 <div class="col-xs-6 col-sm-6">
                     <!--Doesn't make sense to have add friends for main user profile-->
                     <!--<button ng-show= "friendCheck" type="button" class="btn btn-success" ng-click="open()">Friend Me!</button>-->
-                    <button type="button" class="btn btn-info" ng-click="open()">Send me a message</button>
+                    <button type="button" class="btn btn-info" ng-click="open()">Send message</button>
                     <br>
                 </div>
             </div>
