--- a/src/main/resources/public/app/views/editCurrentGames.html
+++ b/src/main/resources/public/app/views/editCurrentGames.html
@@ -69,7 +69,7 @@
                             </div>
                             <div ng-show="currentGames[2].name === 'Diablo 3'">
                                 <input type="text" class="form-control" ng-model="currentGames[2].diabloCharacter" placeholder="Battle Tag">
-                            </div>v
+                            </div>
                         </div>
 
                         <p class="text-danger">{{error}}</p>
